--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     border-radius: 30px;
     background-color: rgba(127, 140, 141, 0.8);
     width: 620px;
-    height: 710px;
+    height: 700px;
     color: #F3F3F3;
 }
 
@@ -88,6 +88,15 @@ input {
 
 #person {
     font-size: 13px;
+}
+
+.footer {
+    display: flex;
+    align-self: center;
+    font-size: 10px;
+    opacity: inherit;
+    font-family: 'Merriweather', serif; 
+    color: rgba(94, 97, 93);
 }
 
 
